<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">IOIO</string>
    <string name="app_reboot_required_message">"%1$s reboot is required for the changes to take effect.

Reboot now?"</string>
    <string name="app_reboot_required_title">App Reboot Required</string>
    <string name="apply_reboot">reboot to apply the modifications</string>
    <string name="backup_dialog_title">Backup/Restore AryaMod Settings</string>
    <string name="boostsound">Sound boost levels</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_backup">Backup Settings?</string>
    <string name="confirm_restore">Restore Settings?</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="drawer_close">Menu closed</string>
    <string name="drawer_open">Menu opened</string>
    <string name="entries_summary">%s</string>
    <string name="exit">Exit App</string>
    <string name="extsound">Boosted sound gain</string>
    <string name="gaining_root">Acquiring root access. Please wait...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="infoextsound">Extreme sound boost.. WARNING</string>
    <string name="infomedsound">Medium sound boost</string>
    <string name="infostocksound">No sound boost (default)</string>
    <string name="killprocess_call_record_in">Incoming call record</string>
    <string name="killprocess_call_record_out">Outgoing call record</string>
    <string name="later">Later</string>
    <string name="listview_accelerate_decelerate_interpolator">Accelerate decelerate</string>
    <string name="listview_accelerate_interpolator">Accelerate</string>
    <string name="listview_alpha">Alpha</string>
    <string name="listview_anticipate_interpolator">Anticipate</string>
    <string name="listview_anticipate_overshoot_interpolator">Anticipate overshoot</string>
    <string name="listview_bounce_interpolator">Bounce</string>
    <string name="listview_decelerate_interpolator">Decelerate</string>
    <string name="listview_fold">Fold</string>
    <string name="listview_off">Off</string>
    <string name="listview_overshoot_interpolator">Overshoot</string>
    <string name="listview_rotate">Rotate</string>
    <string name="listview_scale">Scale</string>
    <string name="listview_stack_bottom">Stack (bottom)</string>
    <string name="listview_stack_top">Stack (top)</string>
    <string name="listview_translate_left">Translate (left)</string>
    <string name="listview_translate_right">Translate (right)</string>
    <string name="listview_unfold">Unfold</string>
    <string name="listview_wave_left">Wave (left)</string>
    <string name="listview_wave_right">Wave (right)</string>
    <string name="medsound">Medium sound gain</string>
    <string name="missing_su">"Your device is either not rooted or the app was denied root permissions.
"<string name="home_wakeup_screen">Home wakeup screen</string>
    <string name="missing_su_title">Could not get root access</string>
    <string name="ok">OK</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="reboottitle">Reboot</string>
    <string name="restore_next_boot">Restore on next boot?</string>
    <string name="stocksound">Stock Samsung sound gain</string>
    <string name="summaryOff">Disabled</string>
    <string name="summaryOn">Enabled</string>
    <string name="theme_chooser_dialog_title">Choose Theme</string>
    <string name="volbtn_music_controls_summary">Customize volume rocker action</string>
    <string name="volbtn_music_controls_title">Music Control</string>
    <string name="volbtn_timeout_summary">%s</string>
    <string name="volbtn_timeout_title">Button delay</string>
    <string name="volbtn_toggle_title">Music Control</string>
    <string name="volbtn_vol_down_summary">%s</string>
    <string name="volbtn_vol_down_title">Volume Down action</string>
    <string name="volbtn_vol_up_summary">%s</string>
    <string name="volbtn_vol_up_title">Volume Up action</string>
    <string name="launcher_looping">Launcher looping</string>
    <string name="launcher_rotation">Launcher rotation</string>
    <string name="launcher_text_color">Launcher text color</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="network_traffic_summary">Enable various network traffic options in statusbar</string>
    <string name="sb_traffic_title">Traffic ThinkingBridge</string>
    <string name="sb_traffic_align_title">Traffic alignment</string>
    <string name="sb_traffic_color_title">Traffic color</string>
    <string name="sb_traffic_size_title">Traffic size</string>
    <string name="sb_traffic_font_title">Traffic font</string>
    <string name="sb_traffic_line_title">Traffic style</string>
    <string name="sb_traffic_right">Right</string>
    <string name="sb_traffic_left">Left</string>
    <string name="sb_traffic_dont_show">"Don't Show"</string>
    <string name="sb_traffic_font_normal">Normal</string>
    <string name="sb_traffic_font_italic">Italic</string>
    <string name="sb_traffic_font_bold">Bold</string>
    <string name="sb_traffic_font_bold_italic">Bold Italic</string>
    <string name="sb_traffic_font_light">Light</string>
    <string name="sb_traffic_font_light_italic">Light Italic</string>
    <string name="dynamic_status_bar_title">Dynamic status bar</string>
    <string name="dynamic_status_bar_color_title">Dynamic status bar color</string>
    <string name="dynamic_status_bar_color_summary">Automatically update background color of the status bar</string>
    <string name="dynamic_status_bar_gradient_title">Gradient</string>
    <string name="dynamic_status_bar_gradient_summary">Overlay a gradient on the status bar</string>
    <string name="dynamic_status_bar_filter_title">Darkening</string>
    <string name="dynamic_status_bar_filter_summary">Overlay a darkening filter on the status bar</string>
    <string name="dsb_gradient_filter_value_0">Off</string>
    <string name="dsb_gradient_filter_value_1">Only on the desktop</string>
    <string name="dsb_gradient_filter_value_2">Everywhere except the desktop</string>
    <string name="dsb_gradient_filter_value_3">On</string>
    <string name="dynamic_status_bar_filter_value">The intensity of the darkening filter</string>
    <string name="network_traffic_titlei">Network traffic</string>
    <string name="show_network_traffic_statei">Status bar traffic monitor</string>
    <string name="network_traffic_summaryi">Enable various network traffic options in statusbar</string>
    <string name="show_network_traffic_unit">Display unit</string>
    <string name="show_network_traffic_frequency">Update interval</string>
    <string name="show_network_traffic_disable">Disabled</string>
    <string name="show_network_traffic_up">Outgoing</string>
    <string name="show_network_traffic_down">Incoming</string>
    <string name="show_network_traffic_all">Outgoing and incoming</string>
    <string name="show_network_traffic_bit">Bits per second</string>
    <string name="show_network_traffic_byte">Bytes per second</string>
    <string name="show_network_traffic_500">500 ms</string>
    <string name="show_network_traffic_1000">1000 ms</string>
    <string name="show_network_traffic_1500">1500 ms</string>
    <string name="show_network_traffic_2000">2000 ms</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
    <string name="network_traffic_color_style">Color style</string>
    <string name="network_traffic_color_reset">Reset color</string>
    <string name="network_traffic_color_reset_message">Reset network traffic color to default?</string>
    <string name="sb_traffic_font_thin">Thin</string>
    <string name="sb_traffic_font_thin_italic">Thin Italic</string>
    <string name="short_press_left">Short press left</string>
    <string name="short_press_left_application">Short press application</string>
    <string name="short_press_left_assignment">Short press assignment</string>
    <string name="show_icon_off">Hide</string>
    <string name="show_icon_on">Show</string>
    <string name="dialog_color_pickeri">Color Picker</string>
    <string name="time_out">Time out</string>
    <string name="press_color_to_applyi">Press on color below to apply</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">\#ffaaaaaa</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="wallpaper_scroll">Wallpaper scroll</string>
    <string name="sb_traffic_font_condensed">Condensed</string>
    <string name="sb_traffic_font_condensed_italic">Condensed Italic</string>
    <string name="sb_traffic_font_condensed_light">Condensed Light</string>
    <string name="sb_traffic_font_condensed_light_italic">Condensed Light Italic</string>
    <string name="sb_traffic_font_condensed_bold">Condensed Bold</string>
    <string name="sb_traffic_font_condensed_bold_italic">Condensed Bold Italic</string>
    <string name="sb_traffic_font_medium">Medium</string>
    <string name="sb_traffic_font_medium_italic">Medium Italic</string>
    <string name="sb_traffic_font_black">Black</string>
    <string name="sb_traffic_font_black_italic">Black Italic</string>
    <string name="sb_traffic_adv_custom_title">Adv Text Customization</string>
    <string name="sb_traffic_shadow_r_title">Shadow radius</string>
    <string name="sb_traffic_shadow_x_title">Shadow Dx</string>
    <string name="sb_traffic_shadow_y_title">Shadow Dy</string>
    <string name="sb_traffic_shadow_c_title">Shadow color</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disable</string>
    <string name="outdoor_mode">Outdoor mode</string>
    <string name="multiwindow">MultiWindow</string>
    <string name="multiwindoww">MultiWindow</string>
    <string name="listview_animation">Listview animation</string>
    <string name="listview_interpolator">Listview interpolator</string>
    <string name="mokee_listview_animations">Mokee Listview Animations</string>
    <string name="restart">Menu opened</string>
    <string name="boot_sounds">Boot sounds</string>
    <string name="enable_or_disable_boot_sound">Enable or disable boot sound</string>
    <string name="disable_boot_sounds">Disable boot sounds</string>
    <string name="enable_boot_sounds">Enable boot sounds</string>
</resources>